<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/history_center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnPrevDiagnoz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RMZ_Button"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="@string/prev_button"/>

        <Button
            android:id="@+id/btnNextDiagnoz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RMZ_Button"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="@string/next_button"/>
        <Button
            android:id="@+id/btnSaveDiagnoz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/RMZ_Button"
            android:padding="20dp"
            android:textStyle="bold"
            android:text="@string/save_button"/>

    </LinearLayout>
    <TextView
        android:id="@+id/tvAnswerActivityDiagnoz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"

        style="@style/RMZ_SimpleTextWithShadow"/>
    <FrameLayout
        android:id="@+id/flDiagnoz"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        >
        
    </FrameLayout>
</LinearLayout>
